--- a/covid/templates/helloworld.html
+++ b/covid/templates/helloworld.html
@@ -8,9 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    {% for mylistitem in mylistitems %}
-    <p>{{mylistitem}}</p>
+    {% for country in mylist %}
+    <p> {{country}} </p>
     {% endfor %}
-    <a href="" class="btn btn-danger">Boton</a>
 </body>
 </html>
