Select with Options

--- a/covid/templates/helloworld.html
+++ b/covid/templates/helloworld.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+
+ <select>
     {% for country in mylist %}
-    <p> {{country}} </p>
+    <option> {{country}} </option>
     {% endfor %}
+ </select>
+
 </body>
 </html>
