--- a/covid/templates/helloworld.html
+++ b/covid/templates/helloworld.html
@@ -16,9 +16,16 @@
              <option> {{country}} </option>
              {% endfor %}
         </select>
-        <input type="submit" >
+        <input type="submit" name="">
     </form>
- 
+    
+    <h1>{{selectedcountry}}</h1>
+    <p>new : {{new}}</p>
+    <p>active : {{active}}</p>
+    <p>critical : {{critical}}</p>
+    <p>recovered : {{recovered}}</p>
+    <p>deaths : {{deaths}}</p>
+    <p>total : {{total}}</p>
 
 </body>
 </html>
